# GBSC

./: .gitignore  AUTHORS  Makefile.am  README.md  build.sh  cleanautotools.sh  configure.ac  install-dependencies.sh
include/: alphabet.h  cluster.h  debug.h  fasta.h  file.h  gbsc.h  graph.h  identify.h  kmer.h  model.h  options.h  output.h  postprocess.h  sequence.h  similaritysearch.h  stringutils.h  threadpool.h
src/: alphabet.cpp  cluster.cpp  fasta.cpp  file.cpp  gbsc.cpp  graph.cpp  identify.cpp  kmer.cpp  libgbsc.cpp  main.cpp  model.cpp  options.cpp  output.cpp  postprocess.cpp  sequence.cpp  similaritysearch.cpp  stringutils.cpp  threadpool.cpp
src/tests/: testalphabet.cpp  testcluster.cpp  testfasta.cpp  testgbsc.cpp  testidentification.cpp  testkmer.cpp  testmodel.cpp  testpostprocess.cpp  testsearch.cpp  teststringutils.cpp  testthreadpool.cpp
src/tests/data/: complex_str_identification.sequence  example.fasta  reading_writing.fasta  sprot_samples.fasta
