AC_PREREQ([2.69])
AC_INIT([gbsc], [0.1], [patryk.jarnot@gmail.com])
AC_CONFIG_SRCDIR([src/gbsc.cpp])
AC_CONFIG_HEADERS([src/config-gbsc.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11 subdir-objects])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT

